--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     height: 100vh;
     overflow: hidden;
     color: #fff;
-    cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="30" height="40" viewport="0 0 30 40" style="fill:none;stroke:purple;stroke-width:2;"><polygon points="0,0 25,20 15,20 20,40 10,30 5,35" fill="%23DA70D6" opacity="0.9" stroke="purple" stroke-width="1"/></svg>') 0 0, auto;
+    cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewport="0 0 40 40" style="fill:none;"><path d="M20 10 C10 5, 0 15, 10 20 C0 25, 10 35, 20 30 C30 35, 40 25, 30 20 C40 15, 30 5, 20 10 Z" fill="%23DA70D6" opacity="0.9"/><circle cx="20" cy="20" r="3" fill="%235500AA"/></svg>') 0 0, auto;
 }
 
 /* Tarjeta de perfil única */
