--- a/styles.css
+++ b/styles.css
@@ -99,11 +99,11 @@ body, .full-screen {
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.85);
-    display: none; /* Oculto por defecto */
+    display: none;
     align-items: center;
     justify-content: center;
     z-index: 1000;
-    cursor: pointer; /* Cambia el cursor para indicar que se puede hacer clic */
+    cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="30" height="40" viewport="0 0 30 40" style="fill:none;stroke:purple;stroke-width:2;"><polygon points="0,0 25,20 15,20 20,40 10,30 5,35" fill="%23DA70D6" opacity="0.9" stroke="purple" stroke-width="1"/></svg>') 0 0, auto;
 }
 
 /* Partículas en el fondo de la imagen ampliada */
@@ -113,7 +113,7 @@ body, .full-screen {
     height: 100%;
     top: 0;
     left: 0;
-    z-index: 0; /* Colocado detrás de la imagen ampliada */
+    z-index: 0;
 }
 
 /* Imagen dentro del contenedor de pantalla completa */
@@ -123,8 +123,8 @@ body, .full-screen {
     object-fit: contain;
     border-radius: 15px;
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
-border: 3px solid rgba(186, 85, 211, 0.8); /* Morado claro */
-    z-index: 1; /* Asegura que la imagen esté sobre las partículas */
+    border: 3px solid rgba(186, 85, 211, 0.8);
+    z-index: 1;
 }
 
 /* Efecto de entrada de la tarjeta de perfil */
@@ -140,5 +140,5 @@ border: 3px solid rgba(186, 85, 211, 0.8); /* Morado claro */
     height: 100%;
     top: 0;
     left: 0;
-    z-index: -1; /* Asegura que el fondo de partículas esté detrás de todo */
+    z-index: -1;
 }
